Fix style: Cards were sometimes out of box.

--- a/frontend/src/stylesheet/grow_guide/Grow_Guides.scss
+++ b/frontend/src/stylesheet/grow_guide/Grow_Guides.scss
@@ -21,13 +21,15 @@ $light: #f3f3f3;
   background-color: $darker-color-blue;
   border-radius: 25px;
 
+  // Not responsive cards, kilog jobbra egy sorban ha össze van tolva
+
 
   .grow-guides-card {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(225px, max-content));
-    grid-gap: 16px;
-    justify-content: center;
+    grid-gap: 10px 30px;
+    justify-content: space-evenly;
     padding: initial;
 
     .grow-guide-card-outer {
@@ -36,15 +38,16 @@ $light: #f3f3f3;
       width: 225px;
       height: 320px;
 
-      margin: 20px 15px;
+      //margin: 20px 15px;
+      margin: 20px 0;
 
       perspective: 1000px;
       display: flex;
       align-items: center;
       cursor: pointer;
-      padding: 5px;
-      font-weight: bold;
-      font-size: 1.5vw;
+      //padding: 10px;
+      //font-weight: bold;
+      //font-size: 1.5vw;
       background-color: #181d35;
       border-radius: 20px;
 
@@ -56,7 +59,7 @@ $light: #f3f3f3;
         width: 100%;
         height: 100%;
 
-        cursor: pointer;
+        //cursor: pointer;
 
         transition: transform 1s;
         transform-style: preserve-3d;
@@ -262,8 +265,8 @@ $light: #f3f3f3;
   .plant-types {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(210px, max-content));
-    grid-gap: 16px;
+    grid-template-columns: repeat(auto-fit, minmax(15vw, max-content));
+    grid-gap: 10px 30px;
     justify-content: center;
     padding: initial;
 
@@ -271,7 +274,7 @@ $light: #f3f3f3;
       display: flex;
       align-items: center;
       cursor: pointer;
-      width: 210px;
+      width: 15vw;
       padding: 10px;
       margin: 5px;
       font-weight: bold;
